improved states feature

--- a/index.html
+++ b/index.html
@@ -1446,6 +1446,7 @@
 
             map.removeLayer(layerGroupStates);
             map.removeLayer(layerGroupCities);
+            map.removeLayer(layerGroupRoads);
 
             switch (currentTask.type) {
                 case "country-name":
