improved states feature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="countries.json"></script>
-    <script src="states.json"></script>
+    <!--<script src="states.json"></script>-->
     <script src="cities.json"></script>
 
 </head>
